                                                  == CHANGES LI DERT==
                                               == ============ ========= =======
/****> heyedt dup mn init_fd
FILE_NAME  : fd_generator;
cause : send bad fd;
/****> changes in epur string logic; 
in case of entring an empty line (ENTREE)
cause : kayn chi read and write in bad size (not enough)
/****> leak:
    -remove anything after finish with,
    -but f token w head the are relieed cause head_cmd dont alloc for state, type 
    -cause of that I get heap use after free
    -free cmd in epur string initial commande and replace it with the epured string;
    -then free final command in lexiacal anlysis after creating token;
    -free token and cmd_flager after creat cmd_table;
/*****> add unset
/*****>
Here doc implementation with expand var;
free the line getted from here_doc function because I have creat a linked list;
then creat an alloced new_line char free it after in the same while;
hada makan then free_here list cause I getted the line that I need.
============================================================LAST=======================================================
add status setter after pressing ctrl+c
change minishell prototype from : minishell(ac, av, env);
 /***>   to : minishell (env);

remove the struct command;
replace it by char *readedline;
the get_input_line change it prototype ;
it be without return and take double pointer;
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^LAST push changes^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
=======================================================================================================
16 : 27  begin status changes;
problem in signals;
implement setter getter function using static var;
about exit_status:

issue with exemple : < in1 < i2 < i3 ls -la -b -a : all OPTION\
but give it to cmd_tbl remplisseur it be good ikhan.
norminette phase :
more that 25 line in a func List_Management.c
