@@ -6,7 +6,7 @@
 /*   By: abait-ta <abait-ta@student.1337.ma >       +#+  +:+       +#+        */
 /*                                                +#+#+#+#+#+   +#+           */
 /*   Created: 2023/10/08 12:57:21 by abait-ta          #+#    #+#             */
-/*   Updated: 2023/10/20 17:05:05 by abait-ta         ###   ########.fr       */
+/*   Updated: 2023/10/22 19:00:03 by abait-ta         ###   ########.fr       */
 /*                                                                            */
 /* ************************************************************************** */
 
@@ -24,10 +24,13 @@ int	run_env(char **cmd_tabl, t_my_env **env)
 	curs = (*env)->next;
 	while (curs)
 	{
-		write(1, curs->var, ft_strlen(curs->var));
-		write(1, "=", 2);
-		write(1, curs->var_content, ft_strlen(curs->var_content));
-		write(1, "\n", 2);
+		if (curs->var_content)
+		{
+			write(1, curs->var, ft_strlen(curs->var));
+			write(1, "=", 2);
+			write(1, curs->var_content, ft_strlen(curs->var_content));
+			write(1, "\n", 2);
+		}
 		curs = curs->next;
 	}
 	return (SUCCES_PROC);
